fix: don't leave ride if user is not in it
